src/css/windows/explorer.css
div.explorer-window {
    @apply w-full h-full flex flex-col gap-2 select-none;

    div.explorer-toolbar {
        @apply p-2 mt-2 flex flex-col;
        box-shadow: inset -2px -2px 0 0 var(--base-100),
            inset 2px 2px 0 0 var(--base-300),
            inset -4px -4px 0 0 var(--base-300),
            inset 4px 4px 0 0 var(--base-100);

        > div:not(.separator) {
            @apply px-4 py-2;
            @apply flex flex-row items-center gap-2;
        }

        div.separator {
            @apply w-full h-2 bg-base-300 border-b-2 border-b-base-100;
        }

        button {
            @apply h-16 px-8 font-normal;
        }

        div.explorer-buttons {
            button {
                @apply h-40 flex flex-col justify-center items-center;
                img {
                    @apply h-14;
                }
            }
            div.separator {
                @apply h-full w-2 bg-base-300 border-r-2 border-r-base-100;
            }
        }

        div.explorer-address {
            @apply gap-4;
            form {
                @apply w-full flex flex-row items-center gap-2;
                input {
                    @apply w-full;
                }
                button {
                    @apply h-20;
                }
            }
        }
    }

    div.file-select-toolbar {
        @apply px-6 py-2 mt-2 flex flex-row items-center gap-4;
        span {
            @apply whitespace-nowrap;
        }
        form {
            @apply w-full flex flex-row items-center gap-2;
            input {
                @apply w-full;
            }
        }
        button {
            @apply h-20;
            img {
                @apply w-18 object-contain;
            }
        }
    }

    div.explorer-content {
        @apply h-full p-8 bg-base-100;
        @apply flex flex-row;

        box-shadow: inset -2px -2px 0 0 var(--base-100),
            inset 2px 2px 0 0 var(--base-300),
            inset -4px -4px 0 0 var(--base-200),
            inset 4px 4px 0 0 var(--base-900);

        button.explorer-icon {
            @apply relative w-56 h-56 outline-none;
            @apply flex flex-col items-center gap-4;
            img {
                @apply w-24 h-24;
            }
            span {
                @apply px-1 text-xl;
                line-height: 100%;
            }
            .folder-lock {
                @apply absolute top-16 right-8;
                @apply w-8 h-11;
            }
            &.explorer-icon-selected {
                span {
                    border: dashed 2px var(--base-900);
                    border-image: url("/border/border-white.png") 25% round;
                    border-image-repeat: round;
                    @apply bg-blue text-base-100;
                }
            }
        }

        input.rename-input {
            @apply w-full px-2;
            @apply border-2 border-black outline-none;
        }
    }

    div.explorer-footer {
        @apply h-32;
        @apply grid grid-cols-2 gap-2;
        div {
            @apply px-2 flex flex-row justify-start items-center gap-2;
            box-shadow: inset -2px -2px 0 0 var(--base-100), inset 2px 2px 0 0 var(--base-300);
            span {
                @apply text-lg;
            }
            img {
                @apply h-12;
            }
        }
    }

    div.file-select-footer {
        @apply grid grid-cols-[8rem,1fr,8rem] items-center;
        @apply p-8 gap-x-6 gap-y-4;
        button {
            @apply h-20 justify-center;
        }
    }
}

